<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Poor Man\'s Logic Analyzer</string>
    <string name="title_activity_main">MainActivity</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="cursor_x1">Cursor X1</string>
    <string name="cursor_x2">Cursor X2</string>
    <string name="move_cursor">Move Cursor</string>
    <string name="move_signal">Move Signal</string>
    <string name="cursor_one_initial_text">X1 = 0,00 us</string>
    <string name="cursor_two_initial_text">X2 = 0,00 us</string>


    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
</resources>
